# code2vec-seminar

./: .gitignore  .gitmodules  Input.java  README.md  build_extractor.sh  code2vec.py  common.py  config.py  extractor.py  fine-tune.sh  finetune_model.py  interactive_predict.py  keras_model.py  metric2csv.py  predict.py  preprocess-pure.sh  preprocess-sprites.sh  preprocess.py  preprocess.sh  pyproject.toml  tensorflow_model.py  test-checkpoints.sh  test-finetuned-checkpoints.sh  train-gender.sh  train.sh  vocabularies.py
JavaExtractor/: extract.py
JavaExtractor/JPredict/: .project
dataset/: check_preprocessed_data.py  create_train_sub_dirs.py  extract_method_min_occurrence.py  extract_method_names.py  relabel.py  split.sh
metrics/gender/normal/: metrics-normal.csv
metrics/gender/pretrained/: metrics-100k.csv  metrics-200k.csv  metrics-300k.csv  metrics-400k.csv  metrics-500k.csv  metrics-600k.csv
metrics/project-category/normal/: metrics-normal.csv
metrics/project-category/pretrained/: metrics-100k.csv  metrics-200k.csv  metrics-300k.csv  metrics-400k.csv  metrics-500k.csv  metrics-600k.csv
metrics/project-category/pretrained-layers/: metrics-1-layers.csv  metrics-2-layers.csv  metrics-3-layers.csv  metrics-4-layers.csv  metrics-5-layers.csv
metrics/sprites/: metrics-100k.csv  metrics-200k.csv  metrics-300k.csv  metrics-400k.csv  metrics-500k.csv  metrics-600k.csv
